--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -10,3 +10,5 @@ google-auth>=2.37.0
 google-auth-oauthlib>=1.2.0
 google-api-python-client>=2.0.0
 openpyxl>=3.1.2
+logfire>=3.1.0
+logfire-api>=3.1.0
