--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -12,3 +12,5 @@ google-api-python-client>=2.0.0
 openpyxl>=3.1.2
 logfire>=3.1.0
 logfire-api>=3.1.0
+pydantic-ai>=0.0.18
+pydantic-ai-slim>=0.0.18
