--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ fsspec>=2024.12.0
 gitdb>=4.0.12
 GitPython>=3.1.44
 google-auth>=2.37.0
+google-auth-oauthlib>=1.2.0
 googleapis-common-protos>=1.66.0
 gotrue>=2.11.1
 greenlet>=3.1.1
