--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "pip install -r requirements.txt"
 
 [deploy]
-startCommand = "streamlit run streamlit_ui.py --server.address=0.0.0.0 --server.port=$PORT"
+startCommand = "streamlit run streamlit_ui.py --server.address=0.0.0.0 --server.port=${PORT:-8501}"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
