Add google-api-python-client to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ frozenlist>=1.5.0
 fsspec>=2024.12.0
 gitdb>=4.0.12
 GitPython>=3.1.44
+google-api-python-client>=2.100.0
 google-auth>=2.37.0
 google-auth-oauthlib>=1.2.0
 googleapis-common-protos>=1.66.0
